[package]
name = "kitten"
version = "0.0.1"
edition = "2021"
authors = ["Shirasawa <3489840593@qq.com>"]
license = "MulanPSL-2.0"
description = " it is an imaginative LVM."
readme = "README.md"
repository = "https://github.com/Shirasawa-CN/Kitten"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.0.27", features = ["derive", "env", "unicode", "wrap_help", "string", "cargo"] }
tokio = { version = "1.22.0", features = ["full"] }
tracing = "0.1.37"
