[package]
name = "kitten"
version = "0.0.1"
edition = "2021"
authors = ["Shirasawa <3489840593@qq.com>"]
license = "MulanPSL-2.0"
description = " it is an imaginative LVM."
readme = "README.md"
repository = "https://github.com/Shirasawa-CN/Kitten"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.0.30", features = ["derive", "env", "unicode", "wrap_help", "string", "cargo"] }
tokio = { version = "1.23.0", features = ["full"] }
tracing = "0.1.37"
libc = "0.2"

[dependencies.windows]
version = "0.43.0"
features = [
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
]

[dependencies.windows-sys]
version = "0.42.0"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
]